--- a/App.Web/Pages/Shared/_Layout.cshtml
+++ b/App.Web/Pages/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/cidades">Cidades</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/usuarios">Usuários</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
@@ -52,6 +54,8 @@
     <script src="~/js/core/requester.js"></script>
     <script src="~/js/core/cookies.js"></script>
     <script src="~/js/services/CidadeService.js"></script>
+
+    <script src="~/js/services/UsuariosService.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
