commit 4 web POST error

--- a/App.Web/Pages/cidades-formulario/cidade.cshtml
+++ b/App.Web/Pages/cidades-formulario/cidade.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/cidades"
 <h4>Lista de Cidades</h4>
-<button onclick="window.location.href = '/cidades/formulario'">Adicionar</button>
+<button class="btn btn-primary" onclick="window.location.href = '/cidades/formulario'">Adicionar</button>
 <div class="table-responsive" id="table">
     <table class="table mb-0">
         <thead>
