--- a/App.Web/Pages/usuarios-formulario/usuarios-formulario.cshtml
+++ b/App.Web/Pages/usuarios-formulario/usuarios-formulario.cshtml
@@ -20,9 +20,10 @@
         </div>
     </div>
 </div>
-<div class="row">
-    <button onclick="window.location.href"="'/usuarios'">Cancelar</button>
-    <button onclick="salvar();">Salvar</button>
+<br />
+<div>
+    <button class="btn btn-primary btn-sm" onclick="salvar();">Salvar</button>
+    <button class="btn btn-danger btn-sm" onclick="window.location.href" ="'/usuarios'">Cancelar</button>
 </div>
 
 @section Scripts {
