--- a/App.Web/Pages/usuarios-formulario/usuarios.cshtml
+++ b/App.Web/Pages/usuarios-formulario/usuarios.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "/usuarios"
 <h4>Lista de Usuários</h4>
-<button onclick="window.location.href = '/usuarios/formulario'">Adicionar</button>
+<button class="btn btn-primary" onclick="window.location.href = '/usuarios/formulario'">Adicionar</button>
 <div class="table-responsive" id="table">
     <table class="table mb-0">
         <thead>
