--- a/App.Web/Pages/Shared/_Layout.cshtml
+++ b/App.Web/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/cidades">Cidades</a>
+                            <a class="nav-link text-dark" href="/cidade">Cidade</a>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/usuarios">Usuários</a>
                         </li>
