--- a/App.Web/Pages/cidade-formulario/cidade-formulario.cshtml
+++ b/App.Web/Pages/cidade-formulario/cidade-formulario.cshtml
@@ -1,31 +1,31 @@
-﻿@page "/cidades/formulario"
+﻿@page "/cidade/formulario/{id?}"
 <h4>Formulário de Cidades</h4>
 <div class="row">
     <div class="col-md-3 col-sm-12">
         <div class="form-group mb-12">
             <label>Cep</label>
-            <input type="text" name="cep" class="form-control" />
+            <input type="text" name="cep" id="cep" class="form-control" />
         </div>
     </div>
     <div class="col-md-6 col-sm-12">
         <div class="form-group mb-12">
-            <label>Cidade</label>
-            <input type="text" name="nome" class="form-control" />
+            <label>UF</label>
+            <input type="text" name="uf" id="uf" class="form-control" />
         </div>
     </div>
     <div class="col-md-3 col-sm-12">
         <div class="form-group mb-12">
-            <label>Uf</label>
-            <input type="text" name="uf" class="form-control" />
+            <label>Municipio</label>
+            <input type="text" name="municipio" id="municipio" class="form-control" />
         </div>
     </div>
 </div>
 <br />
 <div>
     <button class="btn btn-primary btn-sm" onclick="salvar();">Salvar</button>
-    <button class="btn btn-danger btn-sm" onclick="window.location.href" ="'/usuarios'">Cancelar</button>
+    <button class="btn btn-danger btn-sm" onclick="window.location.href='/cidade'">Cancelar</button>
 </div>
 
 @section Scripts {
-    <script src="~/js/pages/cidades-formulario.js"></script>
+    <script src="~/js/pages/cidade/cidade-formulario.js"></script>
 }
