--- a/App.Web/Pages/usuarios-formulario/usuarios-formulario.cshtml
+++ b/App.Web/Pages/usuarios-formulario/usuarios-formulario.cshtml
@@ -4,19 +4,19 @@
     <div class="col-md-3 col-sm-12">
         <div class="form-group mb-12">
             <label>Nome</label>
-            <input type="text" name="nome" class="form-control" />
+            <input type="text" name="nome" id="nome" class="form-control" />
         </div>
     </div>
     <div class="col-md-6 col-sm-12">
         <div class="form-group mb-12">
             <label>Email</label>
-            <input type="text" name="email" class="form-control" />
+            <input type="text" name="email" id="email" class="form-control" />
         </div>
     </div>
     <div class="col-md-3 col-sm-12">
         <div class="form-group mb-12">
             <label>Senha</label>
-            <input type="text" name="senha" class="form-control" />
+            <input type="text" name="senha" id="senha" class="form-control" />
         </div>
     </div>
 </div>
