Users now have cities.

--- a/App.Web/Pages/usuarios-formulario/usuarios-formulario.cshtml
+++ b/App.Web/Pages/usuarios-formulario/usuarios-formulario.cshtml
@@ -19,6 +19,12 @@
             <input type="text" name="senha" id="senha" class="form-control" />
         </div>
     </div>
+    <div class="col-md-3 col-sm-12">
+        <div class="form-group mb-12">
+            <label>Cidade</label>
+            <select id="cidade-select" class="form-control"></select>
+        </div>
+    </div>
 </div>
 <br />
 <div>
