--- a/App.Web/Pages/usuarios-formulario/usuarios.cshtml
+++ b/App.Web/Pages/usuarios-formulario/usuarios.cshtml
@@ -4,9 +4,11 @@
     <table class="table mb-0">
         <thead>
             <tr>
-                <th width="33%">Nome</th>
-                <th width="33%">Email</th>
-                <th width="33%">Config</th>
+                <th width="20%">Nome</th>
+                <th width="20%">Email</th>
+                <th width="20%">Cidade</th>
+                <th width="20%">Cep</th>
+                <th width="20%"></th>
             </tr>
         </thead>
         <tbody>
